# geno-iso

./: .geno-agents  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  GENO.md  README.md  SKILL.md  genotools.yaml  layer.json  mkdocs.yml  package.json  pyproject.toml  skills.sh.json
docs/: cli-reference.md  getting-started.md  index.md
geno_iso/: __main__.py  cli.py  credentials.py  docker.py  profiles.py
grading_comparator/: .gitignore  README.md  pyproject.toml
grading_comparator/configs/: example.yaml
grading_comparator/data/: dataset.csv  heuristic_scores.csv  preference_scores.csv  rubric_a_scores.csv  rubric_b_scores.csv
grading_comparator/grading_comparator/: __init__.py  cli.py
grading_comparator/grading_comparator/comparison/: __init__.py  disagreement.py  engine.py  sensitivity.py
grading_comparator/grading_comparator/experiments/: __init__.py  config.py  runner.py
grading_comparator/grading_comparator/graders/: __init__.py  base.py  heuristic.py  loader.py  precomputed.py  preference.py  rubric.py
grading_comparator/grading_comparator/metrics/: __init__.py  agreement.py  bias.py  correlation.py  distribution.py  ranking.py
grading_comparator/grading_comparator/plotting/: __init__.py  plots.py
grading_comparator/tests/: test_engine.py  test_metrics.py
reward_hack_detector/: README.md  pyproject.toml
reward_hack_detector/examples/: data.jsonl
reward_hack_detector/reward_hack_detector/: __init__.py  __main__.py  cli.py  data.py
reward_hack_detector/reward_hack_detector/analysis/: __init__.py  clustering.py  correlation.py  ranking.py  scoring.py
reward_hack_detector/reward_hack_detector/detectors/: __init__.py  base.py  format_gaming.py  hallucinated_confidence.py  keyword_stuffing.py  verbosity.py
reward_hack_detector/reward_hack_detector/pipeline/: __init__.py  report.py  runner.py
reward_hack_detector/reward_hack_detector/signals/: __init__.py  confidence.py  embedding.py  format.py  length.py  lexical.py
reward_hack_detector/tests/: test_detectors.py  test_pipeline.py  test_signals.py
rubric_eval_harness/: .gitignore  README.md  pyproject.toml
rubric_eval_harness/examples/configs/: multi_criteria.yaml  pairwise_quality.yaml  scalar_helpfulness.yaml  scalar_with_hf_judge.yaml
rubric_eval_harness/examples/data/: prompts.jsonl
rubric_eval_harness/examples/rubrics/: multi_criteria.yaml  pairwise_quality.yaml  scalar_helpfulness.yaml
rubric_eval_harness/rubric_harness/: __init__.py  cli.py
rubric_eval_harness/rubric_harness/evaluation/: __init__.py  engine.py
rubric_eval_harness/rubric_harness/experiments/: __init__.py  config.py  runner.py
rubric_eval_harness/rubric_harness/models/: __init__.py  api.py  base.py  factory.py  hf.py  llama_cpp.py  mock.py
rubric_eval_harness/rubric_harness/rubrics/: __init__.py  parser.py  schema.py
rubric_eval_harness/tests/: test_smoke.py
scripts/: inbox-pickup.sh
(+15 files in other folders)
