[project]
name = "geno-iso"
version = "0.1.0"
description = "Isolated Docker containers for running coding agents"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
geno-iso = "geno_iso.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geno_iso*"]
